# device-runtime-c

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cognit/: CMakeLists.txt
cognit/include/: base64.h  cJSON.h  cJSON_Utils.h  cf_parser.h  cognit_config.h  cognit_encoding.h  cognit_frontend_cli.h  cognit_http.h  device_runtime.h  device_runtime_sm.h  device_runtime_state_machine.h  edge_cluster_frontend_cli.h  faas_parser.h  ip_utils.h  logger.h  offload_fc_c.h  pb_parser.h  proto_parser.h  prov_engine_cli.h  serverless_runtime.h  serverless_runtime_client.h  serverless_runtime_context.h  sr_parser.h
cognit/include/mbedtls/: aes.h  aria.h  asn1.h  asn1write.h  bignum.h  build_info.h  camellia.h  ccm.h  check_config.h  cipher.h  cmac.h  config_psa.h  constant_time.h  ctr_drbg.h  debug.h  dhm.h  ecdsa.h  ecjpake.h  ecp.h  entropy.h  error.h  hmac_drbg.h  legacy_or_psa.h  mbedtls_config.h  md.h  net_sockets.h  oid.h  pk.h  pkcs12.h  pkcs5.h  platform.h  platform_time.h  platform_util.h  psa_util.h  rsa.h  sha256.h  ssl.h  ssl_cache.h  ssl_ciphersuites.h  threading.h  (+5 more)
cognit/include/psa/: crypto.h  crypto_builtin_composites.h  crypto_builtin_primitives.h  crypto_compat.h  crypto_config.h  crypto_driver_contexts_composites.h  crypto_extra.h  crypto_platform.h  crypto_se_driver.h  crypto_sizes.h  crypto_struct.h  crypto_types.h  crypto_values.h
cognit/mbedtls/: CMakeLists.txt  Makefile  aes.c  aesce.c  aesni.c  aria.c  asn1parse.c  asn1write.c  base64.c  bignum.c  bignum_core.c  bignum_mod.c  bignum_mod_raw.c  camellia.c  ccm.c  chacha20.c  chachapoly.c  cipher.c  cipher_wrap.c  cmac.c  constant_time.c  ctr_drbg.c  debug.c  des.c  dhm.c  ecdh.c  ecdsa.c  ecjpake.c  ecp.c  ecp_curves.c  entropy.c  entropy_poll.c  gcm.c  hash_info.c  hkdf.c  hmac_drbg.c  lmots.c  lms.c  md.c  md5.c  (+58 more)
cognit/nanopb/: nano.pb.c  nano.pb.h  pb.h  pb_decode.c  pb_encode.c
cognit/src/: base64.c  cJSON.c  cJSON_Utils.c  cf_parser.c  cognit.c  cognit_encoding.c  cognit_frontend_cli.c  cognit_http.c  device_runtime.c  device_runtime_state_machine.c  edge_cluster_frontend_cli.c  faas_parser.c  ip_utils.c  main.c  offload_fc_c.c  pb_parser.c  proto_parser.c  prov_engine_cli.c  serverless_runtime_client.c  serverless_runtime_context.c  sr_parser.c
cognit/test/: CMakeLists.txt
cognit/test/unit/: test_runner.cpp  utest_base64.cpp  utest_base64.h  utest_faas_parser.cpp  utest_faas_parser.h  utest_http.cpp  utest_http.h  utest_ip_utils.cpp  utest_ip_utils.h  utest_offload_fc_c.cpp  utest_offload_fc_c.h  utest_sr_parser.cpp  utest_sr_parser.h
examples/: CMakeLists.txt  UC3-offload-example.c  UC3-offload-sync-example.c  cognit-template.yml  minimal-offload-async_example.c  minimal-offload-example.c  minimal-offload-sync-example.c
